--- a/TP3/LaurentidesTrails/LaurentidesTrails.vcxproj
+++ b/TP3/LaurentidesTrails/LaurentidesTrails.vcxproj
@@ -116,13 +116,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Park.cpp" />
     <ClCompile Include="Point.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Park.h" />
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="stdc++.h" />
+    <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
