--- a/TP3/LaurentidesTrails/LaurentidesTrails.vcxproj
+++ b/TP3/LaurentidesTrails/LaurentidesTrails.vcxproj
@@ -117,13 +117,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Solution.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Edge.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Point.h" />
+    <ClInclude Include="Solution.h" />
     <ClInclude Include="stdc++.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
